<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment">


    <com.mayurrokade.minibar.MinibarView
        android:id="@+id/Toast"
        style="@style/MinibarViewCustom"
        android:contentDescription="@null"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <com.flaviofaria.kenburnsview.KenBurnsView
        android:id="@+id/Detail_Img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:alpha=".25"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/setting_background" />




    <com.github.florent37.shapeofview.shapes.CircleView
        android:id="@+id/user_img_holder"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@null"
        app:shape_circle_borderColor="@color/colorAppName"
        app:shape_circle_borderWidth="2dp">

        <ImageView
            android:id="@+id/user_img"
            android:contentDescription="@string/cd_user_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop" />
    </com.github.florent37.shapeofview.shapes.CircleView>

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/favourites_text"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-161dp"
        android:fontFamily="@font/beb"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/favourites_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="161dp"
        android:fontFamily="@font/bebas"
        android:text="@string/liked_quotes"
        android:textColor="@color/colorWhite"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/favourites_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/favourites_text"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/bebas"
        android:textColor="@color/colorWhite"
        android:textSize="22sp" />


    <com.varunest.sparkbutton.SparkButton
        android:id="@+id/heart_1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="154dp"
        android:layout_toEndOf="@+id/favourites_text"
        app:sparkbutton_activeImage="@drawable/ic_heart_on"
        app:sparkbutton_animationSpeed=".8"
        app:sparkbutton_iconSize="18dp"
        android:contentDescription="@null"
        app:sparkbutton_primaryColor="@color/colorAccent"
        app:sparkbutton_secondaryColor="@color/colorAppName" />


    <com.varunest.sparkbutton.SparkButton
        android:id="@+id/heart_2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/heart_1"
        android:layout_toStartOf="@+id/favourites_text"
        app:sparkbutton_activeImage="@drawable/ic_heart_on"
        app:sparkbutton_animationSpeed=".8"
        app:sparkbutton_iconSize="18dp"
        android:contentDescription="@null"
        app:sparkbutton_primaryColor="@color/colorAccent"
        app:sparkbutton_secondaryColor="@color/colorAppName" />







    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/recycler_setting_text"
    android:layout_marginTop="60dp"
    android:layout_below="@id/favourites_number"
    android:layout_centerInParent="true"
    android:fontFamily="@font/bebas"
    android:layout_marginBottom="5dp"
    android:text="@string/click_on_quote_to_show_like_tweet_buttons"
    android:textColor="@color/colorWhite"
    android:textSize="22sp" />


    <lib.kingja.switchbutton.SwitchMultiButton
        android:id="@+id/swtich_recylcer"
        android:layout_width="200dp"
        android:layout_height="27dp"
        android:layout_below="@+id/recycler_setting_text"
        android:layout_centerHorizontal="true"
        app:selectedColor="@color/colorAccent"
        app:selectedTab="0"
        app:strokeRadius="11dp"
        app:strokeWidth="1.5dp"
        app:switchTabs="@array/recycler_setting_switches"
        app:textSize="13sp" />

    <TextView
        android:id="@+id/widget_setting_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/swtich_recylcer"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/bebas"
        android:text="@string/quotes_to_display_on_widget"
        android:textColor="@color/colorWhite"
        android:textSize="22sp" />


    <lib.kingja.switchbutton.SwitchMultiButton
        android:id="@+id/swtich_widget"
        android:layout_width="200dp"
        android:layout_height="27dp"
        android:layout_below="@+id/widget_setting_text"
        android:layout_centerHorizontal="true"
        android:padding="9dp"
        app:selectedColor="@color/colorAccent"
        app:selectedTab="0"
        app:strokeRadius="11dp"
        app:strokeWidth="1.5dp"
        app:switchTabs="@array/widget_setting_switches"
        app:textSize="12sp" />


    <ImageView
        android:id="@+id/signout"
        android:layout_width="105dp"
        android:layout_height="24dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="2dp"
        android:contentDescription="@string/sign_out"
        app:srcCompat="@drawable/logout" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/signout"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="15dp"
        android:alpha=".9"
        android:contentDescription="@null"
        android:fontFamily="@font/bebas"
        android:text="@string/sign_out"
        android:textColor="@color/colorAppName"
        android:textSize="15sp" />




</RelativeLayout>


</layout>